# E-Commerce-Data-Science-Agent-System

./: .gitignore  README.md  app.py  check_db.py  check_signature.py  ecommerce.db  main.py  pyproject.toml  requirements.txt  seed_data.py
.agent/workflows/: deploy_on_streamlit_cloud.md
debug/: debug_app_logic.py  debug_general.py  debug_memory.py  debug_segmentation.py  debug_stale_viz.py
src/agents/: ab_test_agent.py  general_agent.py  segmentation_agent.py  supervisor.py
src/prompts/: ab_test_prompt.md  general_prompt.md  segmentation_prompt.md  supervisor_prompt.md
src/states/: state.py
src/tools/: analysis_tools.py
src/utils/: llm_config.py  prompt_loader.py  viz.py
